[tool.poetry]
name = "oops"
version = "0.1.0"
description = "Obsidian Output Pandas Scraper (OOPS)"
authors = ["NoahLE <oops-project@noahle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
